tests/ui/function-contracts/resolution_errors.expected
error: failed to resolve `u8::foo`: unable to find `foo` inside `u8`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(u8::foo)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `<(i32 , i32)>::foo`: unable to find `foo` inside `(i32, i32)`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(<(i32, i32)>::foo)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `<[u32]>::foo`: unable to find `foo` inside `[u32]`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(<[u32]>::foo)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `str::foo`: unable to find `foo` inside `str`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(str::foo)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `<[char ; 10]>::foo`: unable to find `foo` inside `[char; 10]`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(<[char; 10]>::foo)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `<Bar as Foo>::bar`: unable to find `bar` inside trait `Foo`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(<Bar as Foo>::bar)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: failed to resolve `X::bar`: unable to find `bar` inside struct `X`\
resolution_errors.rs\
|\
| #[kani::proof_for_contract(X::bar)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: aborting due to 7 previous errors
